fix: addition to the domain knowledge based filtering edge cases

--- a/DC_Rebirth_List.ipynb
+++ b/DC_Rebirth_List.ipynb
@@ -2225,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2266,6 +2266,10 @@
     "                              'JLA'\n",
     "                            ]:\n",
     "                return \"JUSTICE LEAGUE\"\n",
+    "            case w if w in [\n",
+    "                                'DARK JUSTICE LEAGUE'\n",
+    "                            ]:\n",
+    "                return \"JUSTICE LEAGUE DARK\"\n",
     "            case w if w in [\n",
     "                              'KARA ZOR-EL'\n",
     "                            ]:\n",
